# multi-agent-dsa-backend-logic-synthesis

./: .gitignore  CHANGELOG.md  CHANGELOG_overall.md  CITATION.cff  DEMO_QUESTIONS.md  Dockerfile  LICENSE  READINESS.md  README.md  REPRODUCIBILITY.md  app.py  demo_questions_small_model_yi_coder_1.5b_smollm2_1.7b.md  pyproject.toml  test_generator.py  test_graph.ipynb  test_graph.py  test_reviewer.py  test_reviewer_strict.py
.github/workflows/: ci.yml
Prompts/: explain.txt  generate.txt  optimizer.txt  planner.txt
_legacy_archive/: README.md  requirements.txt  test_explainer.py  test_generator_with_plan.py  test_planner.py
_legacy_archive/Prompts/: evaluator.txt
_legacy_archive/agents/: evaluator_agent.py
_legacy_archive/graph/: workflow.py
_legacy_archive/memory/: ret_.py  seed_techniques.py  technique_retriever.py  technique_selector.py  technique_store.py
_legacy_archive/util/: code_extractor.py  llm.py
agents/: explainer_agent.py  generate_agent.py  optimizer_agent.py  planner_agent.py  review_agent.py  technique_selector_agent.py
agents/single_agent/: run_single_agent.py  single_agent.py
configs/: crossmodel.yaml  default.yaml  hf_fallback.yaml  latest2026.yaml  smaller_model.yaml  strong.yaml  two_model.yaml
execugraph/agents/: base.py  evaluator.py  explainer.py  generator.py  optimizer.py  planner.py  reviewer.py
execugraph/analysis/: build_figures.py  stats.py  (+1 more)
memory/: TECHNIQUES.py  vector_store.py
paper/: CHANGELOG.md  main.tex  references.bib
scripts/: build_preview.sh  run_experiment.py  run_full_grid.sh
util/: code_sanitize.py
(+117 files in other folders)
